[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Shapley"
version = "0.1.0"
description = "Short one-liner."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "mypy",
  "sphinx",
  "myst-parser",
  "sphinxcontrib-napoleon",
  "sphinx-autodoc-typehints",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
